<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="building_kollegienhaus">Kollegienhaus</string>
<string name="building_lzm">Lern Zentrum Medizin</string>
<string name="prefUseOnlyHours">Use only hours</string>
<string name="prefUseOnlyHoursOn">Minutes will be ignored when loading data</string>
<string name="prefUseOnlyHoursOff">Minutes will be used when loading data.</string>
<string name="menuSettings">Settings</string>
<string name="prefBetaKey">Enable beta features</string>
<string name="prefBetaKeyLong">Only for internal use</string>
<string name="building_biopharmazentrum">Bio-/Pharmazentrum</string>
<string name="prefManageBuildings">Manage buildings</string>
<string name="prefManageBuildingsLong">Configure which building to show.</string>
<string name="prefDefaultBuilding">Default building</string>
<string name="prefDefaultBuildingLong">Default building to be shown</string>
<string name="lableTime">Time</string>
<string name="lableTitle">Title</string>
<string name="lableLecturer">Lecturer</string>
<string name="labelRoomDetail">Room</string>
<string name="labelBuilding">Building</string>
<string name="msg_choose_building">Choose building</string>
</resources>
